# agentsystem

./: .env.example  .gitignore  README.md  cli.py  cron_jobs.py  demo.py  demo_snapshot.py  docker-compose.yml  main.py  main_production.py  main_simple.py  pyproject.toml
config/: permission_profiles.yaml  production.yaml  test.yaml
docs/: Human Final Agentic Engineering v1.0 优化：打造高效开发操作系统.md  SESSION_HANDOFF.md  agentsystem_已完成功能与Story-Sprint-Agent流程详解.md  story_completion_standard.md  规则定义.md  通用 Agent 系统框架（L0 + L1）深度解析.md
scripts/: __init__.py  backfill_finahunt_formal_acceptance.py  fix_encoding.py  generate_remaining_full_parity_evidence.py  render_agent_skills.py  render_codex_skill_adapters.py  validate_skill.py
skills/: builder.skill.md  planner.skill.md  requirements_analyst.skill.md  reviewer.skill.md  verifier.skill.md
tasks/: current.yaml  story_status_registry.json  test_fixer.yaml  test_full_flow.yaml  test_pr_prep.yaml  test_reviewer.yaml
tests/: test_acceptance_gate_agent.py  test_agent_activation_resolver.py  test_agent_executor.py  test_agent_skill_render.py  test_auto_deliver_cli.py  test_autonomous_runtime.py  test_browser_runtime.py  test_checkpoint_recovery.py  test_config_reader.py  test_continuity.py  test_dashboard_api.py  test_dashboard_hooks.py  test_delivery_workflow.py  test_design_closure.py  test_design_review_framework.py  test_dev_workflow.py  test_engineering_closeout.py  test_framework.py  test_git_adapter.py  test_gstack_agent_artifacts.py  test_gstack_parity_audit.py  test_gstack_parity_manifest.py  test_investigation_guard.py  (+26 more)
(+364 files in other folders)
