[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsystem"
version = "0.2.0"
description = "Minimal dual-repository development factory"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = [
  "GitPython>=3.1.43",
  "PyYAML>=6.0",
  "chardet>=5.2.0",
  "click>=8.1.7",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "pydantic>=2.0",
  "psycopg2-binary>=2.9.10",
  "langgraph>=0.2.0",
  "langchain-openai>=0.3.0",
  "langchain>=0.3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
